# prabhu-lotr-SDK

./: LICENSE.md  README.md  design.md  setup.cfg
sdk/books/: books.py
sdk/chapters/: __init__.py  chapters.py
sdk/characters/: characters.py
sdk/movies/: movies.py
sdk/quotes/: __init__.py  quotes.py
src/plotrsdk/: books.py  chapters.py  characters.py  movies.py  quotes.py  service.py  utils.py
