[metadata]
name = plotrsdk
version = 1.0.6
author = Prabhu Marappan 
author_email = prabhum.794@gmail.com
description = A Python SDK for the Lord of the Rings API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prabhumarappan/prabhu-lotr-SDK


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src